--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
         "sass-loader": "^8.0.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "dayjs": "^1.11.0",
+        "vue-router": "^3.5.3"
     }
 }
